ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
   # kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/app-root: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/add-base-url : "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
spec:
  ingressClassName: nginx
  rules:
  - host: apipreprod.inscholaris.com
    http:
      paths:
      - path: /student/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-student-backend-preprod
            port:
              number: 5002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-student-backend-preprod
            port:
              number: 5002
      - path: /ums/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-ums-backend-preprod
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-ums-backend-preprod
            port:
              number: 5000
      - path: /admission/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-admission-backend-preprod
            port:
              number: 5004
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-admission-backend-preprod
            port:
              number: 5004
      - path: /employer/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-employer-backend-preprod
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-employer-backend-preprod
            port:
              number: 5001
      - path: /infra/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-infra-backend-preprod
            port:
              number: 9082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-infra-backend-preprod
            port:
              number: 9082
      - path: /search/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-search-backend-preprod
            port:
              number: 9085
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-search-backend-preprod
            port:
              number: 9085
      - path: /configurations/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ins-generic-backend-preprod
            port:
              number: 5003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ins-generic-backend-preprod
            port:
              number: 5003

     

  tls:
      - hosts:
          - apipreprod.inscholaris.com
        secretName: tls-secret1
